--- a/html/about.html
+++ b/html/about.html
@@ -3,15 +3,99 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/css/about.css">
+    <style>
+    @import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Bebas+Neue&family=Chicle&family=Comic+Relief:wght@400;700&family=Dancing+Script:wght@400..700&family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Lilita+One&family=Manufacturing+Consent&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Source+Sans+3:ital,wght@0,200..900;1,200..900&family=Tagesschrift&family=Tuffy:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+    </style>
     <title>About Page</title>
 </head>
 <body>
-    <div class="navbar">
-        <img src="/assets/Read_sphere_logo.png" alt="" width="200px">
-        <ul>
+    <div class="container">
+   <div class="navbar">
+    <div class="logo">
+        <img src="/assets/Read_sphere_logo.png" alt="logo" width="200px">
+    </div>
+    <div class="nav">
+        <ul id="mynav">
             <li>Home</li>
-            
+            <li>Library</li>
+            <li>Contact Us</li>
         </ul>
+    </div>
+    <div class="lgn-btn">
+        <button id="lgn-btn">Login</button>
+    </div>
+   </div>
+    <div class="block1">
+        <h1>About ReadSphere</h1>
+         <p>
+    ReadSphere is an innovative Online Library Management System designed to streamline the way students and readers access, request, and manage books. Our platform bridges the gap between traditional libraries and modern digital convenience.
+  </p>
+
+    </div>
+    <div class="block2">
+        <h2>What is ReadSphere?</h2>
+        <p>
+    ReadSphere is a web-based solution that allows users to:
+    </p> 
+   
+    <ul id="imp_points_div2">
+      <li>Search and explore a wide range of books</li>
+      <li>Request new books to be added</li>
+      <li>Track their issued, returned, and requested books</li>
+      <li>View personal reading history and statistics</li>
+    </ul>
+  
+
+    </div>
+    <div class="block3">
+        <h2>Our Purpose</h2>
+          <p>
+    In today's fast-paced academic environment, we aim to provide an efficient and organized system for managing library resources digitally. No long queues, no paper-based records — just click, read, and grow.
+  </p>
+
+
+    </div>
+    <div class="block4">
+        <h2> Key Features</h2>
+        <ul>
+    <li>Simple and intuitive user interface</li>
+    <li>Request and borrow books online</li>
+    <li>Track reading history and current borrowings</li>
+    <li>Personalized library dashboard for each user</li>
+    <li>Genre-based filtering and smart search</li>
+  </ul>
+
+    </div>
+    <div class="block5">
+        <h2> Who Can Use ReadSphere?</h2>
+          <p>
+    ReadSphere is ideal for:
+    <ul>
+      <li>Students</li>
+      <li>Library administrators</li>
+      <li>Educational institutions</li>
+      <li>Book lovers who want an organized reading experience</li>
+    </ul>
+  </p>
+
+    </div>
+    <div class="block6">
+        <h2> Our Vision</h2>
+         <p>
+    To empower institutions and individuals with digital tools that simplify library access and promote a culture of reading — anytime, anywhere.
+  </p>
+
+    </div>
+    <div class="block7">
+        <h2>Contact & Collaboration</h2>
+  <p>
+    We’d love to hear your thoughts and ideas! For queries, suggestions, or partnerships, feel free to reach out via our <a href="contact.html">Contact Us</a> page.
+  </p>
+
+  <p><em>— The ReadSphere Team</em></p>
+
+    </div>
     </div>
 </body>
 </html>
