--- a/html/landing.html
+++ b/html/landing.html
@@ -48,7 +48,7 @@
                     <li><a href="library.html">Library</a></li>
                     <li><a href="contact.html">Contact</a></li>
                     <li><a href="login.html">Log In</a></li>
-                    <li><a id="register" href="">Register</a></li>
+                    <li><a id="register" href="register.html">Register</a></li>
                    
                     
                 </ul>
