added about section + image, navbar fixed

--- a/html/contact.html
+++ b/html/contact.html
@@ -3,19 +3,45 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/css/contact.css">
     <title>Contact Page</title>
+    <style>
+@import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Bebas+Neue&family=Chicle&family=Comic+Relief:wght@400;700&family=Dancing+Script:wght@400..700&family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Lilita+One&family=Manufacturing+Consent&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Source+Sans+3:ital,wght@0,200..900;1,200..900&family=Tagesschrift&family=Tuffy:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+</style>
 </head>
 <body>
-    <h1>Contact Us</h1>
+    
+  <div class="navbar">
+        <div class="logo">
+            <img src="/assets/Read_sphere_logo.png" alt="logo" width="200px">
+        </div>
+        <div class="nav">
+            <ul id="nav">
+                <li>Home</li>
+                <li>Library</li>
+                <li>About</li>
+                <li>Contact</li>
+                <li>Login</li>
+            </ul>
+        </div>
+
+    </div>
+    <div class="header">
+        <h1>Contact Us</h1>
 <p>Have a question, suggestion, or just want to say hello? We’d love to hear from you!</p>
-<h1>Get in Touch</h1>
+
+    </div>
+    <div class="container">
+        <div class="left">
+            <h1>Get in Touch</h1>
 <p>Connect with us via email or phone — we're available online to assist you anytime.</p>
 
 <p><p>We're always open to feedback, collaboration, or book requests. Just drop us a message and we’ll get back to you shortly!</p>
 </p>
 
-<div class="right">
-    <form action="">
+        </div>
+        <div class="right">
+             <form action="">
         <input type="text" placeholder="Name">
        <input type="tel" name="" id="">
        <input type="email" name="" id="">
@@ -23,6 +49,11 @@
        <textarea name="" id=""></textarea>
        <button>Learn More</button>
     </form>
-</div>
+
+        </div>
+    </div>
+    
+
+
 </body>
 </html>
