--- a/html/library.html
+++ b/html/library.html
@@ -3,9 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/css/library.css">
+    <style>
+@import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Bebas+Neue&family=Chicle&family=Comic+Relief:wght@400;700&family=Dancing+Script:wght@400..700&family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Lilita+One&family=Manufacturing+Consent&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Source+Sans+3:ital,wght@0,200..900;1,200..900&family=Tagesschrift&family=Tuffy:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+</style>
     <title>Library</title>
 </head>
 <body>
+   <div class="navbar">
+        <div class="logo">
+            <img src="/assets/Read_sphere_logo.png" alt="logo" width="200px">
+        </div>
+        <div class="nav">
+            <ul id="nav">
+                <li>Home</li>
+                <li>About</li>
+                <li>Profile</li>
+                <li>Contact</li>
+                <li>Login</li>
+            </ul>
+        </div>
+
+    </div>
     <h1>Welcome to the ReadSphere Library</h1>
   <p>Explore a vast collection of books across genres. Use the search or browse through the collection below.</p>
   <input type="search" name="search" id="search" placeholder="Search by title or author">
